@@ -24,9 +24,9 @@ import org.apache.nifi.json.JsonRecordSetWriter;
 import org.apache.nifi.json.JsonTreeReader;
 import org.apache.nifi.json.JsonTreeRowRecordReader;
 import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.processors.standard.util.JsonUtil;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.schema.access.SchemaAccessUtils;
-import org.apache.nifi.schema.access.SchemaNotFoundException;
 import org.apache.nifi.serialization.MalformedRecordException;
 import org.apache.nifi.serialization.RecordReader;
 import org.apache.nifi.serialization.RecordReaderFactory;
@@ -39,9 +39,8 @@ import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.condition.DisabledOnOs;
-import org.junit.jupiter.api.condition.OS;
 
 import java.io.File;
 import java.io.IOException;
@@ -52,12 +51,12 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-@DisabledOnOs(value = OS.WINDOWS, disabledReason = "Pretty printing is not portable as these fail on windows")
 public class TestForkRecord {
 
     private final String dateFormat = RecordFieldType.DATE.getDefaultFormat();
     private final String timeFormat = RecordFieldType.TIME.getDefaultFormat();
     private final String timestampFormat = RecordFieldType.TIMESTAMP.getDefaultFormat();
+    private TestRunner runner;
 
     private List<RecordField> getDefaultFields() {
         final List<RecordField> fields = new ArrayList<>();
@@ -97,10 +96,13 @@ public class TestForkRecord {
         return new SimpleRecordSchema(transactionFields);
     }
 
-    @Test
-    public void testForkExtractSimpleWithoutParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+    @BeforeEach
+    void setUp() {
+        runner = TestRunners.newTestRunner(ForkRecord.class);
+    }
 
+    @Test
+    public void testForkExtractSimpleWithoutParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -126,15 +128,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "2");
         mff.assertContentEquals("header\n42,4750.89\n43,48212.38\n");
     }
 
     @Test
-    public void testForkExtractSimpleWithParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractSimpleWithParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -165,15 +165,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "2");
         mff.assertContentEquals("header\n42,John Doe,123 My Street,My City,MS,11111,USA,4750.89\n43,John Doe,123 My Street,My City,MS,11111,USA,48212.38\n");
     }
 
     @Test
-    public void testForkExtractNotAnArray() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractNotAnArray() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -204,14 +202,12 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "0");
     }
 
     @Test
-    public void testForkExtractNotAnArrayOfRecords() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractNotAnArrayOfRecords() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.STRING.getDataType();
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -242,14 +238,12 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "0");
     }
 
     @Test
-    public void testForkExtractComplexWithParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -281,16 +275,14 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
         mff.assertContentEquals("header\n5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31\n6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31\n"
                 + "7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78\n8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34\n");
     }
 
     @Test
-    public void testForkExtractComplexWithoutParentFields() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithoutParentFields() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -322,15 +314,13 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
         mff.assertContentEquals("header\n5,150.31\n6,-15.31\n7,36.78\n8,-21.34\n");
     }
 
     @Test
-    public void testForkExtractComplexWithParentFieldsAndNull() throws IOException, MalformedRecordException, InitializationException {
-        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
-
+    public void testForkExtractComplexWithParentFieldsAndNull() throws IOException, InitializationException {
         final DataType accountRecordType = RecordFieldType.RECORD.getRecordDataType(getAccountWithTransactionSchema());
         final DataType accountsType = RecordFieldType.ARRAY.getArrayDataType(accountRecordType);
 
@@ -362,7 +352,7 @@ public class TestForkRecord {
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
 
-        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0);
+        final MockFlowFile mff = runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst();
         mff.assertAttributeEquals("record.count", "4");
         mff.assertContentEquals("header\n5,John Doe,123 My Street,My City,MS,11111,USA,4750.89,150.31\n6,John Doe,123 My Street,My City,MS,11111,USA,4750.89,-15.31\n"
                 + "7,John Doe,123 My Street,My City,MS,11111,USA,48212.38,36.78\n8,John Doe,123 My Street,My City,MS,11111,USA,48212.38,-21.34\n");
@@ -370,8 +360,6 @@ public class TestForkRecord {
 
     @Test
     public void testSplitMode() throws InitializationException, IOException {
-        String expectedOutput = null;
-        final TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
         final JsonTreeReader jsonReader = new JsonTreeReader();
         runner.addControllerService("record-reader", jsonReader);
 
@@ -399,9 +387,9 @@ public class TestForkRecord {
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/split-address.json")));
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "5");
+        String expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/split-address.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "5");
 
         runner.clearTransferState();
         runner.setProperty("my-path", "/bankAccounts[*]/last5Transactions");
@@ -409,15 +397,13 @@ public class TestForkRecord {
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/split-transactions.json")));
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "6");
+        expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/split-transactions.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "6");
     }
 
     @Test
     public void testExtractMode() throws InitializationException, IOException {
-        String expectedOutput = null;
-        final TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
         final JsonTreeReader jsonReader = new JsonTreeReader();
         runner.addControllerService("record-reader", jsonReader);
 
@@ -446,9 +432,99 @@ public class TestForkRecord {
         runner.run();
         runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
         runner.assertTransferCount(ForkRecord.REL_FORK, 1);
-        expectedOutput = new String(Files.readAllBytes(Paths.get("src/test/resources/TestForkRecord/output/extract-transactions.json")));
+        String expectedContent = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-transactions.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertContentEquals(expectedContent);
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).getFirst().assertAttributeEquals("record.count", "6");
+    }
+
+    @Test
+    public void testExtractWithParentFieldsAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "true");
+        runner.setProperty("bankAccounts", "/bankAccounts");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-bank-accounts-with-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "5");
         runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
-        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "6");
+    }
+
+    @Test
+    public void testExtractFieldsAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "false");
+        runner.setProperty("address", "/address");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-address-without-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "5");
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
+    }
+
+    @Test
+    public void testExtractFieldsWithParentsAndFieldConflictAndInferredSchema() throws Exception {
+        TestRunner runner = TestRunners.newTestRunner(new ForkRecord());
+
+        final JsonTreeReader jsonReader = new JsonTreeReader();
+        runner.addControllerService("record-reader", jsonReader);
+        runner.enableControllerService(jsonReader);
+
+        final JsonRecordSetWriter jsonWriter = new JsonRecordSetWriter();
+        runner.addControllerService("record-writer", jsonWriter);
+        runner.setProperty(jsonWriter, "Pretty Print JSON", "true");
+        runner.enableControllerService(jsonWriter);
+
+        runner.setProperty(ForkRecord.RECORD_READER, "record-reader");
+        runner.setProperty(ForkRecord.RECORD_WRITER, "record-writer");
+        runner.setProperty(ForkRecord.MODE, ForkRecord.MODE_EXTRACT);
+        runner.setProperty(ForkRecord.INCLUDE_PARENT_FIELDS, "true");
+        runner.setProperty("address", "/address");
+
+        runner.enqueue(Paths.get("src/test/resources/TestForkRecord/input/complex-input-json-for-inference.json"));
+        runner.run();
+
+        runner.assertTransferCount(ForkRecord.REL_ORIGINAL, 1);
+        runner.assertTransferCount(ForkRecord.REL_FORK, 1);
+
+        final String expectedOutput = JsonUtil.getExpectedContent(Paths.get("src/test/resources/TestForkRecord/output/extract-address-with-parents.json"));
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertAttributeEquals("record.count", "5");
+        runner.getFlowFilesForRelationship(ForkRecord.REL_FORK).get(0).assertContentEquals(expectedOutput);
     }
 
     private class JsonRecordReader extends AbstractControllerService implements RecordReaderFactory {
@@ -483,7 +559,7 @@ public class TestForkRecord {
         }
 
         @Override
-        public RecordSchema getSchema(Map<String, String> variables, RecordSchema readSchema) throws SchemaNotFoundException, IOException {
+        public RecordSchema getSchema(Map<String, String> variables, RecordSchema readSchema) {
             return this.schema;
         }
 
