@@ -66,7 +66,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@DisabledOnOs(value = OS.WINDOWS, disabledReason = "Test only runs on *nix")
 public class TestListFile {
 
     private static boolean isMillisecondSupported = false;
@@ -82,8 +81,16 @@ public class TestListFile {
     // time#millis are absolute time references
     // age#filter are filter label strings for the filter properties
     private Long syncTime = getTestModifiedTime();
-    private Long time0millis, time1millis, time2millis, time3millis, time4millis, time5millis;
-    private String age0, age2, age4, age5;
+    private Long time0millis;
+    private Long time1millis;
+    private Long time2millis;
+    private Long time3millis;
+    private Long time4millis;
+    private Long time5millis;
+    private String age0;
+    private String age2;
+    private String age4;
+    private String age5;
 
     @RegisterExtension
     private final ListProcessorTestWatcher dumpState = new ListProcessorTestWatcher(
@@ -337,7 +344,7 @@ public class TestListFile {
         runner.assertAllFlowFilesTransferred(ListFile.REL_SUCCESS);
         final List<MockFlowFile> successFiles4 = runner.getFlowFilesForRelationship(ListFile.REL_SUCCESS);
         assertEquals(1, successFiles4.size());
-        assertEquals(file2.getName(), successFiles4.get(0).getAttribute("filename"));
+        assertEquals(file2.getName(), successFiles4.getFirst().getAttribute("filename"));
     }
 
     @Test
@@ -460,6 +467,7 @@ public class TestListFile {
         assertEquals(1, successFiles2.size());
     }
 
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "java.io.File setReadable(false) does not work on Windows. See javadocs.")
     @Test
     public void testListWithUnreadableFiles() throws Exception {
         final File file1 = new File(TESTDIR + "/unreadable.txt");
@@ -482,6 +490,7 @@ public class TestListFile {
         assertEquals(1, successFiles.size());
     }
 
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "java.io.File setReadable(false) does not work on Windows. See javadocs.")
     @Test
     public void testListWithinUnreadableDirectory() throws Exception {
         final File subdir = new File(TESTDIR + "/subdir");
@@ -511,12 +520,13 @@ public class TestListFile {
 
             final List<MockFlowFile> successFiles = runner.getFlowFilesForRelationship(ListFile.REL_SUCCESS);
             assertEquals(1, successFiles.size());
-            assertEquals("secondReadable.txt", successFiles.get(0).getAttribute("filename"));
+            assertEquals("secondReadable.txt", successFiles.getFirst().getAttribute("filename"));
         } finally {
             subdir.setReadable(true);
         }
     }
 
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "java.io.File setReadable(false) does not work on Windows. See javadocs.")
     @Test
     public void testListingNeedsSufficientPrivilegesAndFittingFilter() throws Exception {
         final File file = new File(TESTDIR + "/file.txt");
@@ -593,6 +603,7 @@ public class TestListFile {
         runner.assertTransferCount(ListFile.REL_SUCCESS, 0);
     }
 
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "Path filter .*/subdir2 does not discover the single expected match.")
     @Test
     public void testFilterPathPattern() throws Exception {
         final long now = getTestModifiedTime();
@@ -767,6 +778,7 @@ public class TestListFile {
         runner.assertTransferCount(ListFile.REL_SUCCESS, 3);
     }
 
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "username is not contained in file owner attribute")
     @Test
     public void testAttributesSet() throws Exception {
         // create temp file and time constant
@@ -799,7 +811,7 @@ public class TestListFile {
         final String time3Formatted = formatter.format(Instant.ofEpochMilli(time3rounded).atZone(ZoneId.systemDefault()));
 
         // check standard attributes
-        MockFlowFile mock1 = successFiles1.get(0);
+        MockFlowFile mock1 = successFiles1.getFirst();
         assertEquals(relativePathString, mock1.getAttribute(CoreAttributes.PATH.key()));
         assertEquals("file1.txt", mock1.getAttribute(CoreAttributes.FILENAME.key()));
         assertEquals(absolutePathString, mock1.getAttribute(CoreAttributes.ABSOLUTE_PATH.key()));
@@ -814,7 +826,9 @@ public class TestListFile {
         if (store.supportsFileAttributeView("owner")) {
             // look for username containment to handle Windows domains as well as Unix user names
             // org.junit.ComparisonFailure: expected:<[]username> but was:<[DOMAIN\]username>
-            assertTrue(mock1.getAttribute(ListFile.FILE_OWNER_ATTRIBUTE).contains(userName));
+            final String fileOwnerAttribute = mock1.getAttribute(ListFile.FILE_OWNER_ATTRIBUTE);
+            assertTrue(fileOwnerAttribute.contains(userName),
+                    "Expected %s to contain %s but it didn't.".formatted(fileOwnerAttribute, userName));
         }
         if (store.supportsFileAttributeView("posix")) {
             assertNotNull(mock1.getAttribute(ListFile.FILE_GROUP_ATTRIBUTE), "Group name should be set");
@@ -823,7 +837,7 @@ public class TestListFile {
     }
 
     @Test
-    public void testIsListingResetNecessary() throws Exception {
+    public void testIsListingResetNecessary() {
         assertTrue(processor.isListingResetNecessary(ListFile.DIRECTORY));
         assertTrue(processor.isListingResetNecessary(ListFile.RECURSE));
         assertTrue(processor.isListingResetNecessary(ListFile.FILE_FILTER));
@@ -905,10 +919,10 @@ public class TestListFile {
         time4millis = syncTime - age4millis;
         time5millis = syncTime - age5millis;
 
-        age0 = Long.toString(age0millis) + " millis";
-        age2 = Long.toString(age2millis) + " millis";
-        age4 = Long.toString(age4millis) + " millis";
-        age5 = Long.toString(age5millis) + " millis";
+        age0 = age0millis + " millis";
+        age2 = age2millis + " millis";
+        age4 = age4millis + " millis";
+        age5 = age5millis + " millis";
     }
 
     private void deleteDirectory(final File directory) {
@@ -929,7 +943,7 @@ public class TestListFile {
         final List<ConfigVerificationResult> results = processor.verify(runner.getProcessContext(), runner.getLogger(), Collections.emptyMap());
 
         assertEquals(1, results.size());
-        final ConfigVerificationResult result = results.get(0);
+        final ConfigVerificationResult result = results.getFirst();
         assertEquals(expectedOutcome, result.getOutcome());
         assertTrue(result.getExplanation().matches(expectedExplanationRegex),
                 String.format("Expected verification result to match pattern [%s].  Actual explanation was: %s", expectedExplanationRegex, result.getExplanation()));
